# Stowage-Model

./: README.md
src/: 1t.cpp  Algo.cpp  Algo.h  AlgoRunner.cpp  AlgoRunner.h  Balancer.cpp  Balancer.h  CMakeLists.txt  Container.cpp  Container.h  Crane.cpp  Crane.h  Files.cpp  Files.h  Floor.cpp  Floor.h  Move.cpp  Move.h  NaiveAlgo.cpp  NaiveAlgo.h  NaiveAlgoWithTrick.cpp  NaiveAlgoWithTrick.h  NaiveAndStupidAlgo.cpp  NaiveAndStupidAlgo.h  Port.cpp  Port.h  Ship.cpp  Ship.h  ShipPlan.cpp  ShipPlan.h  ShipRoute.cpp  ShipRoute.h  WeightBalancerCalculator.cpp  WeightBalancerCalculator.h  bonus.txt  main.cpp  main.h  makefile  readme.txt  students.txt  (+2 more)
src/Algo/: NaiveAlgo.cpp  NaiveAlgo.h  NaiveAlgoWithTrick.cpp  NaiveAlgoWithTrick.h  _319088373_a.cpp  _319088373_a.h  _319088373_b.cpp  _319088373_b.h  main.cpp  main.h  makefile
src/Algo1/: AlgoRunner.cpp  AlgoRunner.h  Container.cpp  Crane.cpp  Crane.h  Files.cpp  Files.h  NaiveAlgo.cpp  NaiveAlgo.h  NaiveAlgoWithTrick.cpp  NaiveAlgoWithTrick.h  Port.cpp  Port.h  Ship.cpp  Ship.h  ShipRoute.cpp  main.cpp  main.h
src/Algo2/: AbstractAlgorithm.h  Crane.cpp  ShipPlan.cpp  ShipRoute.cpp  main.h
src/Common/: AlgorithmRegistrar.h  AlgorithmRegistration.cpp  Container.cpp  Container.h  Crane.cpp  Crane.h  Files.cpp  Files.h  Ship.cpp  Ship.h  ShipPlan.h  ShipRoute.cpp  WeightBalanceCalculator.cpp
src/Simulation/: AlgoRunner.h  AlgorithmRegistrar.cpp  AlgorithmRegistrar.h  AlgorithmRegistration.cpp  main.cpp  main.h  makefile  simulation.results  simulator
src/algorithm/: _319088373_a.cpp  _319088373_a.h  _319088373_b.cpp  _319088373_b.h  _319088373_c.cpp  _319088373_c.h  _319088373_d.cpp  _319088373_d.h  makefile
src/common/: AlgorithmRegistration.h  Crane.cpp  Crane.h  Files.cpp  Files.h  Floor.cpp  Floor.h  Port.cpp  (+9 more)
(+35 files in other folders)
